# stock-options-intelligence

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: prometheus.yml
docs/: polygon_data_dictionary.md  polygon_listener_guide.md
scripts/: run_listener.sh  setup.sh
src/: __init__.py
src/api/: __init__.py  main.py
src/claude_reasoning/: analyzer.py
src/config/: settings.py
src/data_ingestion/: README.md  __init__.py  market_data.py  polygon_listener.py
src/feature_engineering/: __init__.py  features.py
src/ml_models/: predictor.py
src/signal_generator/: generator.py
src/utils/: logger.py
tests/: conftest.py
tests/unit/: test_signal_generator.py
